Citizen Card Alignment issue in Web and mobile

--- a/frontend/web/rainmaker/dev-packages/egov-ui-kit-dev/src/common/common/Dashboard/component/index.scss
+++ b/frontend/web/rainmaker/dev-packages/egov-ui-kit-dev/src/common/common/Dashboard/component/index.scss
@@ -64,3 +64,17 @@
   //   line-height: 15px!important;
   // }
 }
+
+/* @media only screen and (max-width: 768px) {
+  .clearfix
+      {     
+        height: 398px !important;      
+      }
+    }
+ */
+@media only screen and (max-width: 551px) {
+  .clearfix
+  {     
+    height: auto !important      
+  }
+ }
